--- a/src/stylesheets/base/_colors.scss
+++ b/src/stylesheets/base/_colors.scss
@@ -1,7 +1,7 @@
 $blue: #2196f3;
 $blue-dark: #1976d3;
 $yellow: #f0b114;
-$white: #ffffff;
-$gray-medium: #666666;
-$red: #FF5722;
+$white: #fff;
+$gray-medium: #666;
+$red: #ff5722;
 $green: #7fd87f;
